--- a/frontend-server/src/main/resources/static/login.html
+++ b/frontend-server/src/main/resources/static/login.html
@@ -20,14 +20,14 @@
             <div class="layui-form-item">
                 <label class="layui-form-label">账号： </label>
                 <div class="layui-input-block">
-                    <input type="text" name="phone" maxlength="11" required
+                    <input type="text" name="phone" maxlength="11" required value="13088889999"
                            lay-verify="phone" placeholder="请输入账号" class="layui-input">
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">密码： </label>
                 <div class="layui-input-block">
-                    <input type="password" name="passWord" required  lay-verify="required" placeholder="请输入密码" autocomplete="off" class="layui-input">
+                    <input type="password" name="passWord" required value="123456"  lay-verify="required" placeholder="请输入密码" autocomplete="off" class="layui-input">
                 </div>
             </div>
             <div class="layui-form-item">
